@@ -1,5 +1,7 @@
-* Mon Sep 12 2005 Brendan O'Dea <bod@optus.net> 2.1.6
+* Wed Sep 14 2005 Brendan O'Dea <bod@optus.net> 2.1.6
 - Any traffic on a tunnel resets lastrec, not just control messages.
+- Use a unique identifier for LCP.
+- Fix Code-Reject/Protocol-Reject.
 
 * Sat Sep 3 2005 Brendan O'Dea <bod@optus.net> 2.1.5
 - Avoid Code-Reject loop.
